--- a/css/page__footer.css
+++ b/css/page__footer.css
@@ -4,9 +4,6 @@
   margin-top: 75px;
   background-color: #f1f1f1; }
 
-.page__footer_cart {
-  margin-top: 55px; }
-
 .page__footer_wrap {
   min-height: 160px;
   padding: 0 30px;
@@ -20,6 +17,9 @@
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between; }
+
+.page__footer_cart {
+  margin-top: 55px; }
 
 .footer__social {
   margin: 0 auto;
@@ -108,10 +108,17 @@
   .footer__logo_wrap {
     display: initial;
     margin: 0; }
+  .footer__logo_img {
+    width: 102px;
+    height: auto; }
+    .footer__logo_img:hover {
+      opacity: 0.6; }
+    .footer__logo_img:active {
+      opacity: 0.3; }
   .footer__social {
     margin: 0;
     width: 142px;
-    margin-left: 183px;
+    margin-left: 159px;
     margin-right: auto; }
   .footer__html {
     padding: 0;
@@ -131,7 +138,6 @@
 
 @media screen and (min-width: 1250px) {
   .footer__wrap {
-    width: 1050px;
-    padding-bottom: 20px; }
+    width: 1050px; }
   .footer__social {
-    margin-left: 374px; } }
+    margin-left: 350px; } }
