--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -81,6 +81,7 @@
   .contacts {
     margin: 0;
     padding-top: 60px;
+    margin-bottom: 91px;
   }
 
   .contacts__wrap {
@@ -159,6 +160,7 @@
   .contacts {
     padding-top: 138px;
     width: 100%;
+    margin-bottom: 105px;
   }
 
   .contacts__wrap {
