--- a/css/page__footer.css
+++ b/css/page__footer.css
@@ -89,6 +89,8 @@
   display: none; }
 
 @media screen and (min-width: 768px) {
+  .page__footer {
+    margin: 0; }
   .footer__wrap {
     display: -webkit-box;
     display: -ms-flexbox;
