--- a/sass/catalog.scss
+++ b/sass/catalog.scss
@@ -102,3 +102,64 @@
 .catalog__icon {
   fill-opacity: 0.2;
 }
+
+@media screen and (min-width: 768px) {
+  .catalog__title {
+    font-size: 43px;
+    line-height: 50px;
+  }
+
+  .catalog__title_wrap {
+    height: 190px;
+    padding-bottom: 28px;
+    background-image: url("../img/bg-zigzag-fill.svg");
+    background-size: auto 17px;
+    background-position: bottom left;
+    background-repeat: repeat-x;
+  }
+
+  .catalog__list {
+    padding-top: 45px;
+    width: 668px;
+    margin: 0 auto;
+  }
+
+  .catalog__item {
+    flex-wrap: wrap;
+    height: 335px;
+    border: 1px solid #ececec;
+    margin-bottom: 52px;
+  }
+
+  .catalog__img_wrap {
+    width: 50%;
+    margin: 0;
+  }
+
+  .catalog__spec_wrap {
+    width: 50%;
+    padding: 0 29px;
+  }
+
+  .catalog__subtitle {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
+  .catalog__spec {
+    font-size: 15px;
+    line-height: 34px;
+    margin-bottom: 194px;
+  }
+
+  .catalog__spec_cart {
+    margin-bottom: 173px;
+  }
+
+  .catalog__price {
+    margin: 0;
+    font-size: 17px;
+    line-height: 24px;
+    width: 100%;
+  }
+}
