--- a/sass/page__footer.scss
+++ b/sass/page__footer.scss
@@ -91,6 +91,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .page__footer {
+    margin: 0;
+  }
+
   .footer__wrap {
     display: flex;
     flex-direction: row;
