--- a/sass/contacts.scss
+++ b/sass/contacts.scss
@@ -43,6 +43,7 @@
 .contacts__img {
   width: 320px;
   height: auto;
+  overflow: hidden;
   margin: 0 auto;
 }
 
@@ -151,6 +152,7 @@
     width: 231px;
     margin: 0 auto;
     margin-top: 67px;
+    padding: 14px 39px;
   }
 }
 
