--- a/sass/preview.scss
+++ b/sass/preview.scss
@@ -11,6 +11,7 @@
 .preview__title {
   position: relative;
   top: -8px;
+  left: -5px;
   font-size: 25px;
   line-height: 30px;
   font-weight: bold;
