--- a/sass/form.scss
+++ b/sass/form.scss
@@ -1,8 +1,3 @@
-
-.form {
-  padding: 0 30px;
-}
-
 .main__title_wrap {
   background-color: #f1f1f1;
   height: 176px;
@@ -40,8 +35,11 @@
   display: flex;
   flex-direction: column;
 }
+
 .form__fieldset_name {
   margin-top: 40px;
+  display: flex;
+  flex-direction: column;
 
   .form__label {
     margin-top: 22px;
@@ -65,7 +63,7 @@
 .form__fieldset_tel {
   .form__fieldset_inner {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
   }
 
   .form__input_name {
@@ -78,7 +76,7 @@
 
   .form__icon {
     display: inline-block;
-    width: 34.829px;
+    width: 30px;
     margin-top: 15px;
     border-bottom: 2px solid #444444;
     padding-bottom: 15px;
@@ -93,10 +91,11 @@
 
   .form__fieldset_inner {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
   }
 
   .form__input_name {
+    width: 211px;
     margin-top: 10px;
     padding-bottom: 0;
     display: inline-block;
@@ -257,12 +256,6 @@
   }
 }
 
-.form__icon {
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
 .form__input_name::placeholder {
   font-weight: normal;
   font-size: 17px;
@@ -284,6 +277,7 @@
   line-height: 18px;
   letter-spacing: 0.02em;
 }
+
 .form__requaried {
   display: block;
   margin-top: 18px;
@@ -537,7 +531,7 @@
     margin: 0;
     background-color: #f1f1f1;
     padding-top: 5px;
-    padding-bottom: 50px;
+    padding-bottom: 60px;
 
     .form__legend {
       position: relative;
@@ -555,6 +549,7 @@
     }
 
     .form__input_name {
+      margin: 0;
       width: 84%;
       background-color: transparent;
       padding-left: 20px;
@@ -562,8 +557,166 @@
 
     .form__icon {
       width: 6.666666666666667%;
+      min-width: 32px;
       height: auto;
       padding-right: 20px;
     }
+  }
+
+  .form__fieldset_textarea {
+    width: 678px;
+    margin: 0 auto;
+
+    .form__legend {
+      position: relative;
+      top: 40px;
+      left: 5px;
+    }
+  }
+
+  .form__textarea {
+    width: 500px;
+    margin: 5px 0 0 172px;
+
+    &::placeholder {
+      font-size: 19px;
+    }
+  }
+
+  .form__requaried {
+    margin-left: 420px;
+    margin-top: 75px;
+
+    font-size: 17px;
+  }
+
+  .form__submit {
+    position: relative;
+    top: -65px;
+    left: 50px;
+    padding: 15px 30px;
+  }
+  margin-bottom: 55px;
+}
+
+@media screen and (min-width: 1250px) {
+  .main__title_wrap {
+    height: 220px;
+  }
+
+  .page__text {
+    width: 700px;
+    margin: 0 auto;
+    padding-top: 55px;
+  }
+
+  .form__fieldset_type {
+    width: 1050px;
+
+    .form__legend {
+      padding-left: 65px;
+    }
+
+    .form__label_radio {
+      padding: 0 70px;
+
+      &::before {
+        left: -10px;
+      }
+    }
+  }
+
+  .form__input_radio:checked + .form__label_radio {
+    &::after {
+      left: 5px;
+    }
+  }
+
+  .form__fieldset_color {
+    background-color: #f1f1f1;
+    margin: 0;
+    padding: 55px 50px 0 50px;
+    display: block;
+    min-height: 230px;
+    height: auto;
+
+    .form__legend {
+      left: 100px;
+    }
+
+    .form__fieldset_inner {
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      padding-left: 300px;
+      width: 1050px;
+      margin: 0 auto;
+    }
+
+    .form__label {
+      width: 220px;
+      height: 16px;
+      margin: 0;
+      padding: 0;
+      display: inline-block;
+      margin-bottom: 60px;
+      font-size: 19px;
+      margin-right: 30px;
+
+      &::before {
+        left: -82px;
+      }
+    }
+
+    .form__label_second {
+      padding-left: 0;
+    }
+  }
+
+  .form__input_checkbox:checked + .form__label_second {
+    &::after {
+      left: -80px;
+    }
+  }
+
+  .form__fieldset_name {
+    width: 1050px;
+    margin: 0 auto;
+
+    .form__legend {
+      left: 60px;
+    }
+
+    .form__input_name {
+      width: 626px;
+    }
+
+    .form__input_name2 {
+      width: 570px;
+    }
+  }
+
+  .form__fieldset_tel {
+  }
+
+  .form__fieldset_textarea {
+    width: 1050px;
+
+    .form__legend {
+      left: 60px;
+    }
+
+    .form__textarea {
+      width: 700px;
+    }
+  }
+
+  .form__requaried {
+    position: relative;
+    left: 21%;
+  }
+
+  .form__submit {
+    left: 22%;
   }
 }
