--- a/sass/home.scss
+++ b/sass/home.scss
@@ -22,7 +22,6 @@
 .main__title {
   position: relative;
   top: 70px;
-  left: 7px;
   font-size: 27px;
   line-height: 30px;
   width: 300px;
@@ -62,8 +61,6 @@
   background-color: #56c3b2;
 
   .home__img {
-    position: relative;
-    left: -4%;
     opacity: 0.3;
   }
 }
@@ -182,7 +179,7 @@
     width: 100%;
     height: 25px;
     background-image: url("../img/bg-zigzag-fill.svg");
-    background-size: 1250px 34px;
+    background-size: auto 34px;
     background-position: -5px left;
     background-repeat: repeat-x;
     z-index: 1;
