--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,15 +1,16 @@
-@import url("../css/fonts.css");
-@import url("../css/btn.css");
-@import url("../css/best_week.css");
-@import url("../css/visually_hidden.css");
-@import url("../css/page__header.css");
-@import url("../css/home.css");
-@import url("../css/preview.css");
-@import url("../css/about_us.css");
-@import url("../css/reviews.css");
-@import url("../css/contacts.css");
-@import url("../css/page__footer.css");
-@import url("../css/modal.css");
-@import url("../css/form.css");
-@import url("../css/catalog.css");
-@import url("../css/industry.css");
+@import "normalize";
+@import "fonts";
+@import "btn";
+@import "best_week";
+@import "visually_hidden";
+@import "page__header";
+@import "home";
+@import "preview";
+@import "about_us";
+@import "reviews";
+@import "contacts";
+@import "page__footer";
+@import "modal";
+@import "form";
+@import "catalog";
+@import "industry";
